src/test/deca/extension/codegen/invalid/test_acces_negatif.ass
	ADDSP #3
; start main program
; -------------------------------------
;        Method Table
; -------------------------------------
	LOAD #null, R0
	STORE R0, 2(GB)
	LOAD code.Object.equals, R0
	STORE R0, 3(GB)
; -------------------------------------
;        Main program
; -------------------------------------
; Beginning of main instructions:
; --------StartNewTable--------[10, 14]-----
; [NewTable][loadItemintoRegister] loading NewTable  =  int[] into memory at register R2
	LOAD #2, R3	; loading 2 into memory
	LOAD R3, R1
	ADD #1, R1
	NEW R1, R0
	STORE R3, 0(R0)
	LOAD R0, R2
; --------EndNewTable--------[10, 14]-----
	STORE R2, 1(GB)	; Initializing the variable x and loading it into memory
; --------BeginAssignOp--------[11, 4]-----
	LOAD #2, R3	; loading 2 into memory
; --------StartStoreTableElements--------[11, 4]-----
; [TableGetElement][loadItemintoRegister] storing into TableGetElement  =  x the value in R3
	LOAD #20, R4	; loading 20 into memory
	OPP R4, R4	; Doing an unary minus
	LOAD 1(GB), R1	; [saving] loading x into memory
	LOAD 0(R1), R0	; loading size 1d of x into memory
	LOAD R4, R0
	STORE R3, 1(R1, R0)
; --------EndStoreTableElements--------[11, 4]-----
; --------EndAssignOp--------[11, 4]-----
	HALT
; -------------------------------------
;        Classes
; -------------------------------------
; -------------------------------------
;        Method equal
; -------------------------------------
; ------------------Start generateCodeForObjectEquals location:
code.Object.equals:
	LOAD -2(LB), R0
	CMP R1, R0
	SEQ R0	; Comparaison this et paramètre d'equals
fin.Object.equals:
	RTS
init.Object:
	RTS
; -------------------------------------
;        Liste Erreur
; -------------------------------------
stack_overflow_error:
	WSTR "Error: stack_overflow_error"
	WNL
	ERROR
; end main program
